Decrease width to avoid overlapping in pdf output

--- a/media/jmontero-screen.css
+++ b/media/jmontero-screen.css
@@ -67,7 +67,7 @@ p {
 	left: 25%;
 	margin-bottom: 0.7em;
 	margin-right: 0;
-	width: 75%;
+	width: 60%;
 }
 
 code {
